feat: document service enabled in nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,86 +46,86 @@ services:
     restart: unless-stopped
 
   # Elasticsearch Service
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
-    container_name: elasticsearch
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ports:
-      - "9200:9200"
-      - "9300:9300"
-    volumes:
-      - elasticsearch-data:/usr/share/elasticsearch/data
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "curl --silent --fail localhost:9200/_cluster/health?wait_for_status=yellow&timeout=50s || exit 1",
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 40s
-    networks:
-      - microservices-network
-    restart: unless-stopped
+  # elasticsearch:
+  #   image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
+  #   container_name: elasticsearch
+  #   environment:
+  #     - discovery.type=single-node
+  #     - xpack.security.enabled=false
+  #     - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+  #   ports:
+  #     - "9200:9200"
+  #     - "9300:9300"
+  #   volumes:
+  #     - elasticsearch-data:/usr/share/elasticsearch/data
+  #   healthcheck:
+  #     test:
+  #       [
+  #         "CMD-SHELL",
+  #         "curl --silent --fail localhost:9200/_cluster/health?wait_for_status=yellow&timeout=50s || exit 1",
+  #       ]
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 5
+  #     start_period: 40s
+  #   networks:
+  #     - microservices-network
+  #   restart: unless-stopped
 
   # Booking Service Database
-  booking-db:
-    image: postgres:16-alpine
-    container_name: booking-db
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: admin
-      POSTGRES_DB: booking_service
-    ports:
-      - "5436:5432"
-    volumes:
-      - booking-db-data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    networks:
-      - microservices-network
+  # booking-db:
+  #   image: postgres:16-alpine
+  #   container_name: booking-db
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: admin
+  #     POSTGRES_DB: booking_service
+  #   ports:
+  #     - "5436:5432"
+  #   volumes:
+  #     - booking-db-data:/var/lib/postgresql/data
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "pg_isready -U postgres"]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 5
+  #   networks:
+  #     - microservices-network
 
   # Booking Service
-  booking-service:
-    build:
-      context: ./booking-service
-      dockerfile: Dockerfile
-    container_name: booking-service
-    ports:
-      - "8003:8003"
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: admin
-      POSTGRES_DB: booking_service
-      POSTGRES_HOST: booking-db
-      POSTGRES_PORT: 5432
-      AUTH_SERVICE_URL: http://auth-service:8000
-      REDIS_URL: redis://redis:6379
-      TOKEN_SECRET: dev-secret-key-change-in-production
-      ELASTICSEARCH_HOST: elasticsearch
-      ELASTICSEARCH_PORT: 9200
-      ELASTICSEARCH_URL: http://elasticsearch:9200
-    depends_on:
-      redis:
-        condition: service_healthy
-      booking-db:
-        condition: service_healthy
-      elasticsearch:
-        condition: service_healthy
-    volumes:
-      - ./booking-service:/app
-    # Increase shared memory for Playwright/Chromium (default 64MB is too small)
-    shm_size: "2gb"
-    networks:
-      - microservices-network
-    restart: unless-stopped
+  # booking-service:
+  #   build:
+  #     context: ./booking-service
+  #     dockerfile: Dockerfile
+  #   container_name: booking-service
+  #   ports:
+  #     - "8003:8003"
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: admin
+  #     POSTGRES_DB: booking_service
+  #     POSTGRES_HOST: booking-db
+  #     POSTGRES_PORT: 5432
+  #     AUTH_SERVICE_URL: http://auth-service:8000
+  #     REDIS_URL: redis://redis:6379
+  #     TOKEN_SECRET: dev-secret-key-change-in-production
+  #     ELASTICSEARCH_HOST: elasticsearch
+  #     ELASTICSEARCH_PORT: 9200
+  #     ELASTICSEARCH_URL: http://elasticsearch:9200
+  #   depends_on:
+  #     redis:
+  #       condition: service_healthy
+  #     booking-db:
+  #       condition: service_healthy
+  #     elasticsearch:
+  #       condition: service_healthy
+  #   volumes:
+  #     - ./booking-service:/app
+  #   # Increase shared memory for Playwright/Chromium (default 64MB is too small)
+  #   shm_size: "2gb"
+  #   networks:
+  #     - microservices-network
+  #   restart: unless-stopped
 
   # Document Service Database
   document-db:
@@ -270,7 +270,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - auth-service
-      - booking-service
+      # - booking-service
       - document-service
       # Uncomment when services are enabled:
       # - food-service
@@ -285,8 +285,8 @@ networks:
 
 volumes:
   auth-db-data:
-  booking-db-data:
+  # booking-db-data:
   document-db-data:
   redis-data:
   # food-db-data:
-  elasticsearch-data:
+  # elasticsearch-data:
