--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,11 +13,17 @@ upstream auth_service {
 # Product Service - Port 8001 (REMOVED - functionality integrated into food-service)
 # Inventory Service - Port 8002 (REMOVED - functionality integrated into food-service)
 
-# Booking Service - Port 8003
-upstream booking_service {
-    server booking-service:8003;
+# Document Service - Port 8001
+upstream document_service {
+    server document-service:8001;
     keepalive 32;
 }
+
+# Booking Service - Port 8003 (commented out - service not enabled)
+# upstream booking_service {
+#     server booking-service:8003;
+#     keepalive 32;
+# }
 
 # Food Service - Port 8004 (commented out - service not enabled)
 # upstream food_service {
@@ -25,11 +31,11 @@ upstream booking_service {
 #     keepalive 32;
 # }
 
-# Client (Frontend) - Port 5173 (commented out - service not enabled)
-# upstream client {
-#     server client:5173;
-#     keepalive 32;
-# }
+# Client (Frontend) - Port 5173
+upstream client {
+    server client:5173;
+    keepalive 32;
+}
 
 # Main server block
 server {
@@ -59,18 +65,28 @@ server {
     # Auth Service Routes
     # ============================================
     location /auth/ {
-        proxy_pass http://auth_service/auth/;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        
-        # CORS headers (if not handled by service)
-        add_header Access-Control-Allow-Origin * always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-        
+        # Handle preflight OPTIONS requests
         if ($request_method = OPTIONS) {
+            add_header Access-Control-Allow-Origin $http_origin always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Max-Age 3600 always;
+            add_header Content-Length 0 always;
+            add_header Content-Type "text/plain" always;
             return 204;
         }
+        
+        proxy_pass http://auth_service;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        proxy_set_header Host $host;
+        
+        # CORS headers for actual requests (only add if Origin header is present)
+        add_header Access-Control-Allow-Origin $http_origin always;
+        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With" always;
     }
 
     # Auth Service Docs
@@ -90,38 +106,82 @@ server {
     }
 
     # ============================================
-    # Booking Service Routes
+    # Document Service Routes
     # ============================================
-    location /booking/ {
-        proxy_pass http://booking_service/booking/;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        
-        # CORS headers
-        add_header Access-Control-Allow-Origin * always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH,DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-        
+    location /documents/ {
+        # Handle preflight OPTIONS requests
         if ($request_method = OPTIONS) {
+            add_header Access-Control-Allow-Origin $http_origin always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Max-Age 3600 always;
+            add_header Content-Length 0 always;
+            add_header Content-Type "text/plain" always;
             return 204;
         }
+        
+        proxy_pass http://document_service;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        proxy_set_header Host $host;
+        
+        # CORS headers for actual requests (only add if Origin header is present)
+        add_header Access-Control-Allow-Origin $http_origin always;
+        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With" always;
     }
+
+    # Document Service Docs
+    location /documents/docs {
+        proxy_pass http://document_service/docs;
+        proxy_http_version 1.1;
+    }
+
+    location /documents/redoc {
+        proxy_pass http://document_service/redoc;
+        proxy_http_version 1.1;
+    }
+
+    location /documents/openapi.json {
+        proxy_pass http://document_service/openapi.json;
+        proxy_http_version 1.1;
+    }
+
+    # ============================================
+    # Booking Service Routes (commented out - service not enabled)
+    # ============================================
+    # location /booking/ {
+    #     proxy_pass http://booking_service/booking/;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Connection "";
+    #     
+    #     # CORS headers
+    #     add_header Access-Control-Allow-Origin * always;
+    #     add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
+    #     add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+    #     
+    #     if ($request_method = OPTIONS) {
+    #         return 204;
+    #     }
+    # }
 
     # Booking Service Docs
-    location /booking/docs {
-        proxy_pass http://booking_service/docs;
-        proxy_http_version 1.1;
-    }
+    # location /booking/docs {
+    #     proxy_pass http://booking_service/docs;
+    #     proxy_http_version 1.1;
+    # }
 
-    location /booking/redoc {
-        proxy_pass http://booking_service/redoc;
-        proxy_http_version 1.1;
-    }
+    # location /booking/redoc {
+    #     proxy_pass http://booking_service/redoc;
+    #     proxy_http_version 1.1;
+    # }
 
-    location /booking/openapi.json {
-        proxy_pass http://booking_service/openapi.json;
-        proxy_http_version 1.1;
-    }
+    # location /booking/openapi.json {
+    #     proxy_pass http://booking_service/openapi.json;
+    #     proxy_http_version 1.1;
+    # }
 
     # ============================================
     # Food Service Routes (commented out - service not enabled)
@@ -176,33 +236,25 @@ server {
     # }
 
     # ============================================
-    # Frontend Client (React App) (commented out - service not enabled)
-    # ============================================
-    # location / {
-    #     proxy_pass http://client/;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Connection "";
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     
-    #     # WebSocket support for Vite HMR (Hot Module Replacement)
-    #     location /ws {
-    #         proxy_pass http://client/ws;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Upgrade $http_upgrade;
-    #         proxy_set_header Connection "upgrade";
-    #         proxy_read_timeout 86400;
-    #     }
-    # }
-
-    # ============================================
-    # Default Root Location (when client is not enabled)
+    # Frontend Client (React App)
     # ============================================
     location / {
-        return 200 "Nginx Reverse Proxy is running. Available services:\n- /auth/ - Auth Service\n- /booking/ - Booking Service\n- /health - Health Check\n";
-        add_header Content-Type text/plain;
+        proxy_pass http://client/;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket support for Vite HMR (Hot Module Replacement)
+        location /ws {
+            proxy_pass http://client/ws;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_read_timeout 86400;
+        }
     }
 
     # ============================================
@@ -211,6 +263,14 @@ server {
     location /health {
         access_log off;
         return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+
+    # ============================================
+    # API Info Endpoint (when accessing root directly)
+    # ============================================
+    location = /api/info {
+        return 200 "Nginx Reverse Proxy is running. Available services:\n- /auth/ - Auth Service\n- /documents/ - Document Service\n- /health - Health Check\n";
         add_header Content-Type text/plain;
     }
 
