i feat: document service enabled in nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,6 +37,15 @@ upstream client {
     keepalive 32;
 }
 
+# Map for CORS origin handling
+# Allows localhost origins and defaults to http://localhost if no origin is provided
+map $http_origin $cors_origin {
+    default $http_origin;
+    "" "http://localhost";
+    "~^http://localhost(:[0-9]+)?$" $http_origin;
+    "~^http://127.0.0.1(:[0-9]+)?$" $http_origin;
+}
+
 # Main server block
 server {
     listen 80;
@@ -67,8 +76,8 @@ server {
     location /auth/ {
         # Handle preflight OPTIONS requests
         if ($request_method = OPTIONS) {
-            add_header Access-Control-Allow-Origin $http_origin always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Origin $cors_origin always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
             add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With" always;
             add_header Access-Control-Allow-Credentials "true" always;
             add_header Access-Control-Max-Age 3600 always;
@@ -82,10 +91,10 @@ server {
         proxy_set_header Connection "";
         proxy_set_header Host $host;
         
-        # CORS headers for actual requests (only add if Origin header is present)
-        add_header Access-Control-Allow-Origin $http_origin always;
+        # CORS headers for actual requests
+        add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Credentials "true" always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With" always;
     }
 
@@ -111,8 +120,8 @@ server {
     location /documents/ {
         # Handle preflight OPTIONS requests
         if ($request_method = OPTIONS) {
-            add_header Access-Control-Allow-Origin $http_origin always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Origin $cors_origin always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
             add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With" always;
             add_header Access-Control-Allow-Credentials "true" always;
             add_header Access-Control-Max-Age 3600 always;
@@ -126,10 +135,10 @@ server {
         proxy_set_header Connection "";
         proxy_set_header Host $host;
         
-        # CORS headers for actual requests (only add if Origin header is present)
-        add_header Access-Control-Allow-Origin $http_origin always;
+        # CORS headers for actual requests
+        add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Credentials "true" always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With" always;
     }
 
