--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -234,6 +234,7 @@ services:
     environment:
       - VITE_AUTH_SERVICE_URL=http://localhost:8000
       - VITE_BOOKING_SERVICE_URL=http://localhost:8003
+      - VITE_DOCUMENT_API_URL=http://localhost:8001
     volumes:
       - ./client:/app
       - /app/node_modules
@@ -259,25 +260,25 @@ services:
     restart: unless-stopped
 
   # Nginx Reverse Proxy
-  nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    container_name: nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - auth-service
-      # - booking-service
-      - document-service
-      # Uncomment when services are enabled:
-      # - food-service
-      - client
-    networks:
-      - microservices-network
-    restart: unless-stopped
+  # nginx:
+  #   build:
+  #     context: ./nginx
+  #     dockerfile: Dockerfile
+  #   container_name: nginx
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+  #   depends_on:
+  #     - auth-service
+  #     # - booking-service
+  #     - document-service
+  #     # Uncomment when services are enabled:
+  #     # - food-service
+  #     - client
+  #   networks:
+  #     - microservices-network
+  #   restart: unless-stopped
 
 networks:
   microservices-network:
